更新博客信息

--- a/config/page/project.json
+++ b/config/page/project.json
@@ -1,6 +1,6 @@
 {
     "pageTitle": "Project",
-    "navH1": "WORLD",
+    "navH1": "喵落阁",
     "leftFirstContainer": {
         "title": "🎯项目",
         "image": "\/res\/pic\/index.webp",
